back to mutable list in bitmaskSelect >= instead of > fix comment